<resources>
    <string name="app_name">Twitter</string>
    <string name="base_url">https://wizetwitterproxy.herokuapp.com</string>

    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="sentiment_base_url">http://text-processing.com/</string>
    <string name="profile">Profile</string>
    <string name="new_tweet">New Tweet</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="website">Website</string>
    <string name="birthday">Birthday</string>

    <string name="tweet">Tweet</string>

    <string name="error_newtweet_nomorecharactersalowed">Your tweet can only have 140 characters</string>

    <string name="tweet_post_successful">Your tweet has been published correctly</string>
    <string name="tweet_post_error">Has been an error while we were publishing your tweet, please try again later</string>

    <string name="share">Share</string>

    <string name="send_to">Send to:</string>

    <string name="reply">Reply:</string>
</resources>
